--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "better-scroll": "^0.2.4",
     "fastclick": "^1.0.6",
     "vue": "^2.2.2",
     "vue-core-image-upload": "^2.2.4",
