--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "better-scroll": "^0.2.4",
     "fastclick": "^1.0.6",
     "vue": "^2.2.2",
+    "vue-awesome-swiper": "^2.5.4",
     "vue-core-image-upload": "^2.2.4",
+    "vue-lazyload": "^1.0.5",
     "vue-resource": "^1.3.4",
     "vue-router": "^2.2.0",
     "vue-scroll": "^2.0.3",
