--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "vue-resource": "^1.3.4",
     "vue-router": "^2.2.0",
     "vuex": "^2.3.1",
-    "vux": "^2.2.1"
+    "vux": "^2.2.1",
+    "weixin-js-sdk": "^1.2.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.7.2",
