--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "vue-loader": "^11.1.4",
     "vue-style-loader": "^2.0.0",
     "vue-template-compiler": "^2.2.4",
+    "vue-viewload": "^1.0.15",
     "vux-loader": "^1.0.61",
     "webpack": "^2.2.1",
     "webpack-bundle-analyzer": "^2.2.1",
