--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "better-scroll": "^0.2.4",
     "fastclick": "^1.0.6",
+    "urlencode": "^1.1.0",
     "vue": "^2.2.2",
     "vue-awesome-swiper": "^2.5.4",
     "vue-core-image-upload": "^2.2.4",
