--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   },
   "dependencies": {
     "babel-runtime": "^6.26.0",
+    "better-scroll": "^0.1.15",
     "fastclick": "^1.0.6",
+    "jroll": "^2.5.0",
     "urlencode": "^1.1.0",
     "vue": "^2.2.2",
     "vue-awesome-swiper": "^2.5.4",
@@ -24,7 +26,6 @@
     "vue-router": "^2.2.0",
     "vuex": "^2.3.1",
     "vux": "^2.2.1",
-    "better-scroll": "^0.1.15",
     "weixin-js-sdk": "^1.2.0"
   },
   "devDependencies": {
